SQL Editor framework M3I2: launch, execute and outline

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/build.properties
@@ -4,6 +4,7 @@ output.sqleditor.jar = bin/
 bin.includes = sqleditor.jar,\
                schema/,\
                plugin.xml,\
+               plugin.properties,\
                about.html
                
 jars.extra.classpath =
