--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/build.xml
@@ -185,7 +185,7 @@
 			<fileset dir="${build.result.folder}" includes="sqleditor.jar"			/>
 		</copy>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="true" overwrite="false">
-			<fileset dir="${basedir}" includes="sqleditor.jar,schema/,plugin.xml,about.html"			/>
+			<fileset dir="${basedir}" includes="sqleditor.jar,schema/,plugin.xml,plugin.properties,about.html"			/>
 		</copy>
 			<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false">
 			<fileset dir="${basedir}" includes="sqleditorsrc.zip"/>
