*** empty log message ***

--- a/plugins/org.eclipse.datatools.sqltools.debugger.core/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.debugger.core/build.xml
@@ -191,7 +191,7 @@
 			<fileset dir="${build.result.folder}" includes="sqldebugcore.jar"			/>
 		</copy>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="true" overwrite="false">
-			<fileset dir="${basedir}" includes="META-INF/,sqldebugcore.jar,about.html"			/>
+			<fileset dir="${basedir}" includes="META-INF/,icons/,sqldebugcore.jar,about.html"			/>
 		</copy>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false">
 			<fileset dir="${basedir}" includes="sqldebugcoresrc.zip"/>
