--- a/plugins/org.eclipse.datatools.sqltools.plan/src/org/eclipse/datatools/sqltools/plan/internal/PluginResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.plan/src/org/eclipse/datatools/sqltools/plan/internal/PluginResources.properties
@@ -1,2 +1,4 @@
 EPVFacade.checkview.error=Can not open SQL Execution Plan View
 PlanServiceRegistry.create.runnable.error=Fail to create executable extension
+LoadPlanAction.error.message=Failed to load plan from file.
+SavePlanAction.error.message=Failed to save plan to file.
