--- a/plugins/org.eclipse.datatools.sqltools.result/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result/plugin.properties
@@ -2,7 +2,8 @@ SQLResultsView.name=SQL Results
 SQLResultsView.full.name=SQL Results View
 SQLResultsView.display.options=SQL Results View Display Options
 SQLResultsView.export.options=SQL Results View Export Format
-SQLResultsView.history.page=Result History Display Options
+SQLResultsView.history.page=Result History Options
 RemoveResultAction.command.name=Remove Result
 RemoveAllResultAction.command.name=Remove All Visible Results
 TerminateInstanceAction.command.name=Terminate Result
+DataTools.name=Data Tools
