--- a/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.xml
@@ -170,7 +170,69 @@
          </properties>
       </driverTemplate>
    </extension> 
+  <extension
+         point="org.eclipse.datatools.connectivity.driverExtension">     
    
+      <driverTemplate
+            createDefault="false"
+            emptyJarListIsOK="false"
+            id="org.eclipse.datatools.connectivity.db.generic.genericDriverTemplate"
+            jarList=""
+            name="Generic JDBC Driver"
+            parentCategory="org.eclipse.datatools.connectivity.sqm.core.driverCategory">
+         <properties>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.sqm.core.driverClass"
+                  name="Driver Class"
+                  value=""
+                  required="true"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.sqm.core.vendor"
+                  name="Vendor"
+                  value="Generic JDBC"
+                  required="true"
+                  visible="false"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.sqm.core.version"
+                  name="Version"
+                  value="1.0"
+                  required="true"
+                  visible="false"/>   
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.sqm.core.databaseName"
+                  name="Database Name"
+                  value="SAMPLE"
+                  required="true"
+                  visible="true"/>                             
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.sqm.core.URL"
+                  name="Connection URL"
+                  value="jdbc:"
+                  required="true"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.sqm.core.username"
+                  name="User ID"
+                  value=""
+                  required="false"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.sqm.core.password"
+                  name="Password"
+                  value=""
+                  required="false"
+                  visible="true"/>
+         </properties>
+      </driverTemplate>
+   </extension>   
    <extension 
        point="org.eclipse.datatools.connectivity.driverExtension">     
     <category 
@@ -236,6 +298,7 @@
        </properties> 
     </driverTemplate> 
  </extension> 
+ 
  
 <!--      <extension
          point="org.eclipse.ui.navigator.navigatorContent">
