[122042] Updated the localized plugin properties translated from corresponding English version.

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.properties
@@ -12,14 +12,14 @@
 # Plug-in Profile Configuration
 #
 connection.profile.id=org.eclipse.datatools.connectivity.oda.flatfile.ui.profile
-category.id=org.eclipse.datatools.connectivity.oda.flatfile.profileCategory
+oda.data.source.id=org.eclipse.datatools.connectivity.oda.flatfile
 oda.parent.category.id=org.eclipse.datatools.connectivity.oda.profileCategory
 #
 ###############################################################################
 # NLS Strings
 #
 plugin.name=DTP ODA Flat File Designer
-category.name=CSV Flat Files
+oda.data.source.name=CSV Flat Files
 oda.parent.category.name=ODA Data Sources
 connection.profile.name=ODA Flat File Data Source Connection Profile
 oda.connection.factory.name=ODA Connection Factory
