--- a/plugins/org.eclipse.datatools.connectivity.dbdefinition.genericJDBC/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.dbdefinition.genericJDBC/build.properties
@@ -12,3 +12,10 @@ bin.includes = runtime/,\
                plugin.xml,\
                plugin.properties,\
                about.html
+jars.extra.classpath =
+src.dir	= src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
