[Bugzilla 121761] This delivery fixes the issue where the SQL connection was being used for the file and ODA connections. The issue was with filtering and the new 3.2 expressions language used (test instead of objectState).

--- a/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.xml
@@ -342,6 +342,9 @@
                <or>
                   <and>
                      <instanceof value="org.eclipse.datatools.connectivity.IConnectionProfile"/>
+				     <test
+						property="org.eclipse.datatools.connectivity.profile.property.factoryID"
+						value="java.sql.Connection"/>
                   </and>
                   <instanceof value="org.eclipse.datatools.modelbase.sql.schema.SQLObject"/>
                   <instanceof value="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.virtual.IVirtualNode"/>
