[124407] Update build files for M3

--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/build.properties
@@ -36,3 +36,11 @@ src.excludes = src/com/ibm/db/parsers/sql/query/.cvsignore,\
                src/com/ibm/db/parsers/sql/query/test/test.sql,\
                src/com/ibm/db/parsers/sql/query/test/update.sql,\
                src/com/ibm/db/parsers/sql/query/test/update_conditions.sql
+            
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
