--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.lexer/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.lexer/build.properties
@@ -13,4 +13,12 @@ src.includes = src/,\
                thirdparty/
 jars.compile.order = lexer.jar,\
                      thirdparty/lpg.jar
+              
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
  
