--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.xml.query/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.xml.query/build.properties
@@ -11,3 +11,11 @@ src.includes = .classpath,\
                plugin.xml,\
                src/,\
                bin/
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
