--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql/build.properties
@@ -13,3 +13,11 @@ src.includes = src/,\
                .project,\
                build.properties,\
                plugin.properties
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
