--- a/plugins/org.eclipse.datatools.connectivity.oda.profile/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda.profile/plugin.xml
@@ -14,6 +14,10 @@
    <requires>
       <import plugin="org.eclipse.datatools.connectivity"/>
       <import plugin="org.eclipse.datatools.connectivity.oda"/>
+      <import plugin="org.eclipse.core.runtime"/>
+      <import plugin="org.eclipse.ui"/>
+      <import plugin="org.eclipse.datatools.connectivity.ui"/>
+      <import plugin="org.junit" optional="true"/>
    </requires>
 
 </plugin>
