[124952] Remove Eclipse 3.2 specific values from manifest file. Add "Data Tools" preference category to connectivity.ui

--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
@@ -17,4 +17,5 @@ Extension.PropertyPage.Version.Name = Version
 ProfileFailure = Data Source Explorer Failures
 Extension.NewWizard.Name = Connection Profile
 Extension.NewWizard.Description = Create a connection profile
+datatools.preference.page.name=Data Tools
 drivers.preference.page.name = Driver Definitions
