--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <plugin>
-
+   <extension point="org.eclipse.ui.preferencePages">
+   	<page name="%datatools.preference.page.name" class="org.eclipse.datatools.connectivity.internal.ui.preferences.DataToolsMainPage"
+   	id = "org.eclipse.datatools.connectivity.internal.ui.preferences.DataToolsMainPage"/>
+   	</extension>
    <extension
          point="org.eclipse.ui.preferencePages">
       <page
             name="%drivers.preference.page.name"
             class="org.eclipse.datatools.connectivity.internal.ui.preferences.DriverPreferences"
-            id="org.eclipse.datatools.connectivity.internal.ui.preferences.DriverPreferences">
+            id="org.eclipse.datatools.connectivity.internal.ui.preferences.DriverPreferences"
+            category="org.eclipse.datatools.connectivity.internal.ui.preferences.DataToolsMainPage">
       </page>
    </extension>
    <extension
