--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.properties
@@ -3,3 +3,4 @@ category.datatools.description=Database development tools
 DatabaseManagement.command.explain=Get Execution Plan
 DatabaseManagement.command.execute=Execute All
 DatabaseManagement.command.execute.select=Execute Selected Text
+sqlEditorName=SQL Editor
