*** empty log message ***

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/build.properties
@@ -3,6 +3,7 @@ source.sqleditor.jar = src/
 output.sqleditor.jar = bin/
 bin.includes = sqleditor.jar,\
                schema/,\
+               icons/,\
                plugin.xml,\
                plugin.properties,\
                about.html
