--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/build.properties
@@ -1,7 +1,17 @@
+jars.compile.order = sqlscrapbook.jar
 source.sqlscrapbook.jar = src/
+output.sqlscrapbook.jar = bin/
 bin.includes = plugin.xml,\
                sqlscrapbook.jar,\
                plugin.properties,\
                images/,\
                about.html
-output.sqlscrapbook.jar = bin/
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
+
