--- a/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.xml
@@ -17,11 +17,16 @@
             name="SQL Model-JDBC Connection"/>
       <connectionFactory
             class="org.eclipse.datatools.connectivity.db.generic.SQMConnectionFactory"
+            id="org.eclipse.datatools.connectivity.sqm.internal.core.connection.ConnectionInfo"
+            name="SQL Model Connection"
+            profile="org.eclipse.datatools.connectivity.db.generic.connectionProfile"/>
+      <connectionFactory
+            class="org.eclipse.datatools.connectivity.db.generic.JDBCConnectionFactory"
             id="java.sql.Connection"
             name="JDBC Connection"
             profile="org.eclipse.datatools.connectivity.db.generic.connectionProfile"/>
       <connectionFactory
-            class="org.eclipse.datatools.connectivity.db.generic.SQMConnectionFactory"
+            class="org.eclipse.datatools.connectivity.db.generic.JDBCConnectionFactory"
             id="org.eclipse.datatools.connectivity.connectionFactory.pingFactory"
             name="Ping Connection Factory"
             profile="org.eclipse.datatools.connectivity.db.generic.connectionProfile"/>
@@ -344,7 +349,7 @@
                      <instanceof value="org.eclipse.datatools.connectivity.IConnectionProfile"/>
 				     <test
 						property="org.eclipse.datatools.connectivity.profile.property.factoryID"
-						value="java.sql.Connection"/>
+						value="org.eclipse.datatools.connectivity.sqm.internal.core.connection.ConnectionInfo"/>
                   </and>
                   <instanceof value="org.eclipse.datatools.modelbase.sql.schema.SQLObject"/>
                   <instanceof value="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.virtual.IVirtualNode"/>
