--- a/plugins/org.eclipse.datatools.modelbase.sql.query/build.xml
+++ b/plugins/org.eclipse.datatools.modelbase.sql.query/build.xml
@@ -41,6 +41,7 @@
 		<fileset dir="${eclipse.home}/plugins">
 			<include name="org.eclipse.core.runtime_*.jar"/>
 			<include name="org.eclipse.osgi_*.jar"/>
+			<include name="com.ibm.icu_*.jar"/>
 			<!-- Include jared EMF plug-ins -->
 			<include name="org.eclipse.emf.ecore_*.jar"/>
 			<include name="org.eclipse.emf.common_*.jar"/>
