[121885] Created the ODA Data Source Designer UI framework plug-in (oda.design.ui); refactored the exemplary oda.flatfile.ui implementation to extend from the new framework.

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.properties
@@ -25,4 +25,4 @@ oda.connection.factory.name=ODA Connection Factory
 ping.factory.name=Profile Ping Factory
 newwizard.name=ODA Flat File Data Source
 newwizard.description=Create an ODA Flat File connection profile
-profile.propertypage.name=ODA Flat File Data Source Connection Properties Page
+profile.propertypage.name=ODA Flat File Data Source Connection Properties
