--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/plugin.properties
@@ -1,16 +1,15 @@
 ###############################################################################
-# Copyright (c) 2005, 2006 Actuate Corporation.
+# Copyright (c) 2006 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
 # http://www.eclipse.org/legal/epl-v10.html
 #
 # Contributors:
-#  Actuate Corporation  - initial API and implementation
+#  Actuate Corporation - initial API and implementation
 #
 ###############################################################################
 # NLS String
 ###############################################################################
 #
-plugin.name=DTP ODA Connection Profile Framework Plug-in
-
+plugin.name=DTP ODA Designer UI Framework Plug-in
