--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
@@ -26,6 +26,7 @@
       <import plugin="org.eclipse.datatools.modelbase.dbdefinition"/>
       <import plugin="org.eclipse.datatools.connectivity.ui"/>
       <import plugin="org.eclipse.ui.navigator"/>
+      <import plugin="com.ibm.icu"/>
    </requires>
 
 
