--- a/plugins/org.eclipse.datatools.connectivity.ui/build.xml
+++ b/plugins/org.eclipse.datatools.connectivity.ui/build.xml
@@ -50,6 +50,7 @@
 			<include name="org.eclipse.ui.workbench_*.jar"/>
 			<include name="org.eclipse.ui.views_*.jar"/>
 			<include name="org.eclipse.core.expressions_*.jar"/>
+			<include name="com.ibm.icu_*.jar"/>
 			<!-- Include expanded plug-ins -->
 			<include name="org.eclipse.core.runtime_*/org.eclipse.core.runtime_*.jar"/>
 			<include name="org.eclipse.osgi_*/org.eclipse.osgi_*.jar"/>
