--- a/plugins/org.eclipse.datatools.sqltools.editor.core/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/build.xml
@@ -60,6 +60,7 @@
 			<include name="org.eclipse.emf.commonj.sdo_*.jar"/>
 			<include name="org.eclipse.emf.ecore.xmi_*.jar"/>
 			<include name="org.eclipse.emf.ecore.change_*.jar"/>
+			<include name="com.ibm.icu_*.jar"/>
 			<!-- Include expanded plug-ins -->
 			<include name="org.eclipse.core.runtime_*/org.eclipse.core.runtime_*.jar"/>
 			<include name="org.eclipse.osgi_*/org.eclipse.osgi_*.jar"/>
