--- a/plugins/org.eclipse.datatools.sqltools.result/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.result/build.xml
@@ -57,6 +57,7 @@
 			<include name="org.eclipse.ui.editors_*.jar"/>
 			<include name="org.eclipse.core.filebuffers_*.jar"/>
 			<include name="org.eclipse.ui.console_*.jar"/>
+			<include name="com.ibm.icu_*.jar"/>
 			<!-- Include expanded plug-ins -->
 			<include name="org.eclipse.core.runtime_*/org.eclipse.core.runtime_*.jar"/>
 			<include name="org.eclipse.osgi_*/org.eclipse.osgi_*.jar"/>
